--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,60 @@
 page-home {
-
+   .scroll-content{
+      // margin-top: 56px !important;
+   }
+   .bricks-grid{
+      margin-top: 17px;
+   }
+   .time, .moves{
+      font-size: 2em;
+      text-align: center;
+   }
+   .moves{
+      transform: translateX(10px);
+      font-size: 2.7em;
+      font-weight: bold;
+   }
+   .icon{
+      float: right;
+      font-size: 1.4em;
+   }
+   .card-container{
+   	perspective: 700;
+   	position: relative;
+   	height: 50px;
+   	width: 50px;
+   	margin-bottom: 4%;
+   	border-radius:6px;
+   }
+   .card{
+   	width: 100%;
+   	height: 100%;
+   	transition: all 0.6s ease;
+   	transform-style: preserve-3d;
+   	position:absolute;
+   }
+   .front{
+   	background-color: #A8F3EF;
+   	width: 100%;
+   	height: 100%;
+   	backface-visibility: hidden;
+   	position:absolute;
+   	overflow: hidden;
+   	border-radius:6px;
+   	// box-shadow:5px 5px #83cee0 inset, 5px 5px #83cee0;
+   	box-shadow: 5px 3px #83cee0,  3px 5px #83cee0;
+   	text-align: center;
+   	line-height: 70px;
+   }
+   .back{
+   	width: 100%;
+   	height: 100%;
+   	transform: rotateY(180deg);
+   	backface-visibility: hidden;
+   	position:absolute;
+   	overflow: hidden;
+   }
+   // .card:hover{
+   // 	transform: rotateY(180deg);
+   // }
 }
